--- a/pdfViewer/src/main/AndroidManifest.xml
+++ b/pdfViewer/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-        <activity
-            android:name=".PdfViewerActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".PdfViewerActivity" />
     </application>
 
 </manifest>
