--- a/pdfViewer/src/main/AndroidManifest.xml
+++ b/pdfViewer/src/main/AndroidManifest.xml
@@ -3,12 +3,11 @@
     package="com.rajat.pdfviewer">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <application>
+    <application
+        android:allowBackup="true"
+        android:supportsRtl="true">
         <activity
             android:name=".PdfViewerActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/AppTheme" />
     </application>
-
 </manifest>
