--- a/pdfViewer/src/main/AndroidManifest.xml
+++ b/pdfViewer/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".PdfViewerActivity"
             android:theme="@style/AppTheme" />
